--- a/HAKKARİ.html
+++ b/HAKKARİ.html
@@ -98,7 +98,7 @@
     </section>
 
     <section class="footer">
-        <p>Bulak mah. Bulvar cadd. BULVAR GÜVENLİK Hakkari,TURKEY | Phone:+90 (438) 211 8373 | Email:
+        <p>Bulak mahallesi. Bulvar cadd. BULVAR GÜVENLİK Hakkari,TURKEY | Phone:+90 (438) 211 8373 | Email:
             catalbedirhan@gmail.com</p>
         <p>Copyright c 2022 Qutdoor Hakkari</p>
     </section>
