--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </section>
 
     <section class="footer">
-        <p>Bulak mahallesi. Bulvar cadd. BULVAR GÜVENLİK Hakkari,TURKEY | Phone:+90 (438) 211 8373 | Email:
+        <p>Bulak mahallesi. Bulvar cadd. BULVAR GÜVENLİK Hakkarı,TURKEY | Phone:+90 (438) 211 8373 | Email:
             catalbedirhan@gmail.com</p>
-        <p>Copyright c 2022 Qutdoor Hakkari</p>
+        <p>Copyright c 2022 Qutdoor Hakkarı</p>
     </section>
 
 
